--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once"
   },
+  "types": "src/index.d.ts",
   "devDependencies": {
     "ban-sensitive-files": "1.9.2",
     "dependency-check": "3.3.0",
