--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "files": [
     "src/*.js",
+    "src/index.d.ts",
     "!src/*-spec.js"
   ],
   "homepage": "https://github.com/bahmutov/mocked-env#readme",
