feat: add restore option (#99)
* Add restore option

Some tests may want to use the natural system environment but then restore it completely after the test (so that any environment variables added during the test get removed).  Adding a 'restore' option allows for this.

* Allow for passing options as first argument

* Fix defect

* Fix default value for restore option

* feat: "restore" option and options as first argument

this feature adds a restore option that if passed will restore the process.env environment when the restore() function is called. This varies from the current "clear" functionality as it does not clear the current environment when mockedEnv is called.

* fix: add error tests and documentation about new features

* feat: add TypeScript defininition

* feat: support for ES6 style default imports

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "files": [
     "src/*.js",
+    "src/index.d.ts",
     "!src/*-spec.js"
   ],
   "homepage": "https://github.com/bahmutov/mocked-env#readme",
@@ -82,6 +83,7 @@
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once"
   },
+  "types": "src/index.d.ts",
   "devDependencies": {
     "ban-sensitive-files": "1.9.2",
     "dependency-check": "3.3.0",
