--- a/package.json
+++ b/package.json
@@ -4,28 +4,6 @@
   "version": "0.0.0-development",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bugs": "https://github.com/bahmutov/mocked-env/issues",
-  "config": {
-    "pre-git": {
-      "commit-msg": "simple",
-      "pre-commit": [
-        "npm prune",
-        "npm run deps",
-        "npm test",
-        "npm run warn-only",
-        "git add src/*.js",
-        "npm run ban"
-      ],
-      "pre-push": [
-        "npm run unused-deps",
-        "npm run license",
-        "npm run ban -- --all",
-        "npm run stop-only",
-        "npm run size"
-      ],
-      "post-commit": [],
-      "post-merge": []
-    }
-  },
   "engines": {
     "node": ">=6"
   },
@@ -47,17 +25,6 @@
   "publishConfig": {
     "registry": "http://registry.npmjs.org/"
   },
-  "release": {
-    "analyzeCommits": {
-      "preset": "angular",
-      "releaseRules": [
-        {
-          "type": "break",
-          "release": "major"
-        }
-      ]
-    }
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/bahmutov/mocked-env.git"
@@ -72,14 +39,13 @@
     "pretest": "npm run lint",
     "posttest": "npm run warn-only",
     "pretty": "prettier-standard 'src/*.js'",
-    "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
+    "size": "npm pack --dry",
     "test": "npm run unit",
     "unit": "mocha src/*-spec.js",
     "unused-deps": "dependency-check --unused --no-dev .",
     "stop-only": "stop-only -f src",
     "warn-only": "stop-only -f src --warn",
-    "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once"
+    "semantic-release": "semantic-release"
   },
   "types": "src/index.d.ts",
   "devDependencies": {
@@ -89,7 +55,6 @@
     "git-issues": "1.3.1",
     "license-checker": "20.2.0",
     "mocha": "7.1.2",
-    "pre-git": "3.17.1",
     "prettier-standard": "9.1.1",
     "standard": "11.0.1",
     "stop-only": "3.1.0",
